# ParallelLBM

./: CMakeLists.txt  README.md
include/: solver.hpp
src/: main.cpp  solver.cpp
